Fri Sep 19 15:48:09 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (VCSUP): nothing to do if this worktree is not under
	  any VCS (it means that the worktree may be from the release package).

Fri Sep 19 10:47:03 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/test_math.rb (TestMath#assert_infinity): Float#finite?
	  returns true also for NaN, so use Float#infinite? instead.
	  [ruby-core:65117] [Feature #10261]

Fri Sep 19 05:36:16 2014  Eric Wong  <e@80x24.org>

	* NEWS: note --with-jemalloc option [ci skip]

Thu Sep 18 16:26:27 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/rubygems/test_gem_commands_setup_command.rb: @ui uses StringIO
	  as its streams, and Encoding.default_external does not effect to
	  stringIOs already exist.  so, we need to set external_encoding of
	  @ui.outs directly.  this problem (test failure) does not appear in
	  the environments default_external is us-ascii or utf-8.

Thu Sep 18 15:02:15 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/rubygems/test_gem_specification.rb: '/' is not always the root.

Thu Sep 18 09:36:37 2014  Scott Francis  <scott.francis@shopify.com>

	* vm_method.c (Init_Method): make global method cache size
	  configurable by environment variable
	  "RUBY_GLOBAL_METHOD_CACHE_SIZE"  [Fix GH-719]

Thu Sep 18 07:03:36 2014  Eric Wong  <e@80x24.org>

	* test/-ext-/string/test_modify_expand.rb: increase limit
	  for {je,tc}malloc [Bug #10236]

Thu Sep 18 06:41:18 2014  Eric Wong  <e@80x24.org>

	* ext/zlib/zlib.c (struct gzfile): pack (288 => 272 bytes) on 64-bit

Thu Sep 18 05:44:05 2014  Eric Wong  <e@80x24.org>

	* ext/socket/init.c (rsock_connect): refactor for blocking
	  (wait_connectable): clear error before wait
	  [Bug #9356]

Wed Sep 17 23:12:36 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/uri/rfc3986_parser.rb: specify a regexp for :OPAQUE; generic.rb
	  assumes it is present, and will refuse all values otherwise.
	  by Matthew Draper <matthew@trebex.net>